# portfolio

./: .gitignore  README.md
AI/Matlab - ML/P0/: p0 enun
AI/Matlab - ML/P1/: memoria.odt
AI/Matlab - ML/P2/: correcciones
AI/Matlab - ML/P5/: comentario profe
AI/Matlab - ML/P6/: KfoldCrossValidationLambda.m  P62.m  P63.m  clasificacionBayesiana.m  estandarizar.m  ordenacionVVP.m  practica6.odt
AI/Matlab - ML/P7/: P7.odt
AI/Matlab - ML/P8/: apuntes.odt
arduino/MemoryGame/: MemoryGame.ino  memoryGameScheme.fzz
arduino/PokerTexas/: PokerTexas.fzz  mainControlers.ino  mano.h  necesidades
arduino/RemotePWP/HoodLoader2/: Readme.md
arduino/RemotePWP/IR_Receiver_Module/: IR_Receiver_Module.ino  basicSchematic.fzz
arduino/RemotePWP/ppt_pointer_code_1_ino/: ppt_pointer_code_1_ino.ino
arduino/Whack-a-mole/: whack-a-mole.fzz
c++/Graphics/entregaFinal/photon_mapping/source/photon_mapping/SmallPM/: CMakeLists.txt
c++/Graphics/entregaFinal/photon_mapping/source/photon_mapping/SmallPM/include/: KDTree.h  PhotonMapping.h
c++/Graphics/entregaFinal/photon_mapping/source/photon_mapping/SmallPM/smallrt/include/: globals.h
c++/Graphics/entregaFinal/photon_mapping/source/photon_mapping/SmallPM/src/: PhotonMapping.cpp  main.cpp
c++/Linda Server/trabajo/Pruebas/TrabajoPSCD-master/: CMakeLists.txt  Makefile_LindaServerFULL  Makefile_Servidor  clienteSimple.cpp
technical profiles/data project/: LLM_read_embeddings.py  README.md  chromaDBusage.py  create_embeddings.py  test_embeddings.py
technical profiles/fullstack project/: README.md  localhost_up.sh
(+238 files in other folders)
